# obelisk

./: .gitignore  .gitmodules  LICENSE  Makefile.am  README  configure.ac
cli/: Makefile.am  obelisk_main.c
src/: Makefile.am  ej.c  ej.h  ej_error.c  ej_error.h  main.c  obelisk.c  obelisk.h  obelisk_error.c  obelisk_error.h  obelisk_json.c  obelisk_json.h  obelisk_main.c
